[package]
name = "sdebug"
version = "0.1.0"
authors = ["Jesse Jones <jesse9jones@gmail.com>"]
description = "Discrete event simulation library"
#readme = "README.md"
keywords = ["discrete", "simulation", "debugger"]
categories = ["science"]
license = "GPL-3.0"

[dependencies]
clap = "2.24.0"			# pretty nifty command line parser
