[package]
name = "sdebug"
version = "0.1.0"
authors = ["Jesse Jones <jesse9jones@gmail.com>"]
description = "Discrete event simulation library"
#readme = "README.md"
keywords = ["discrete", "simulation", "debugger"]
categories = ["science"]
license = "GPL-3.0"

[dependencies]
clap = "2.24.0"			# pretty nifty command line parser
crest = "0.3.0"			# REST client
rustyline = "1.0.0"		# command line editing, tab completion, etc
serde = "1.0.0"			# serialization
serde_derive = "1.0.0"	# #[derive(Serialize, Deserialize) support
